[gd_scene load_steps=2 format=3 uid="uid://b8ecipthwbqmm"]

[ext_resource type="Script" uid="uid://c8pisr7qt6gq2" path="res://assets/scenes/menus/options.gd" id="1_26tx4"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_26tx4")

[node name="OptionsContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="OptionsContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -70.5
offset_right = 45.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2

[node name="MasterVolumeLabel" type="Label" parent="OptionsContainer/ButtonContainer"]
layout_mode = 2
text = "Master volume"

[node name="MasterVolumeSlider" type="HSlider" parent="OptionsContainer/ButtonContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ReturnToMenuButton")
max_value = 1.0
step = 0.2
ticks_on_borders = true
ticks_position = 3

[node name="HSeparator2" type="HSeparator" parent="OptionsContainer/ButtonContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="OptionsContainer/ButtonContainer"]
layout_mode = 2
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="OptionsContainer/ButtonContainer"]
layout_mode = 2
max_value = 1.0
step = 0.2
ticks_on_borders = true
ticks_position = 3

[node name="HSeparator3" type="HSeparator" parent="OptionsContainer/ButtonContainer"]
layout_mode = 2

[node name="SoundVolumeLabel" type="Label" parent="OptionsContainer/ButtonContainer"]
layout_mode = 2
text = "Sounds"

[node name="SoundVolumeSlider" type="HSlider" parent="OptionsContainer/ButtonContainer"]
layout_mode = 2
max_value = 1.0
step = 0.2
ticks_on_borders = true
ticks_position = 3

[node name="HSeparator4" type="HSeparator" parent="OptionsContainer/ButtonContainer"]
layout_mode = 2

[node name="ReturnToMenuButton" type="Button" parent="OptionsContainer/ButtonContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../MasterVolumeSlider")
text = "Return to Menu"

[connection signal="value_changed" from="OptionsContainer/ButtonContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="OptionsContainer/ButtonContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="OptionsContainer/ButtonContainer/SoundVolumeSlider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="pressed" from="OptionsContainer/ButtonContainer/ReturnToMenuButton" to="." method="_on_return_to_menu_button_pressed"]
